syntax = "proto3";

package squareup.cash.pranadb.service;

option go_package = "github.com/squareup/pranadb/protos/squareup/cash/pranadb/service";

message GetMaterializedViewRequest {
  string schema_name = 1;
  string name = 2;
}

message GetMaterializedViewResponse {}

service PranaDB {
  rpc GetMaterializedView(GetMaterializedViewRequest) returns (GetMaterializedViewResponse);
}